# OpenGLTemplate

./: CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/EmptyWindow/: CMakeLists.txt
Applications/EmptyWindow/Source/: main.cpp
Applications/Include/: Shader.h
Applications/Resources/: fragment.frag  vertex.vert
Applications/Resources/Shaders/: fragment.frag  vertex.vert
Applications/Sample/: CMakeLists.txt
Applications/Sample/Source/: main.cpp
Applications/Scene/: CMakeLists.txt
Applications/Scene/Include/: Application.hpp  Camera.hpp  Light.hpp  Mesh.hpp  ModelLoader.hpp  Object.hpp  Texture.hpp  TransformationMaterialUBO.hpp  Window.hpp
Applications/Scene/Resources/Models/sphere/: sphere.mtl
Applications/Scene/Resources/Shaders/: flatShading.frag  flatShading.vert  fragment.frag  gouraudShading.frag  gouraudShading.vert  light.frag  light.vert  phongShading.frag  phongShading.vert  phongShadingTexture.frag  vertex.vert
Applications/Scene/Source/: Application.cpp  Camera.cpp  Light.cpp  Mesh.cpp  ModelLoader.cpp  Object.cpp  Texture.cpp  TransformationMaterialUBO.cpp  Window.cpp  main.cpp
Applications/Source/: Shader.cpp  main.cpp
Libraries/: CMakeLists.txt
Libraries/ImGui/: CMakeLists.txt
Libraries/ImGui/Include/: gl3w.h
Libraries/ImGui/Source/: imgui_impl_glfw_gl3.cpp
Libraries/ShaderLoader/: CMakeLists.txt
Libraries/ShaderLoader/Include/: Shader.h
Libraries/ShaderLoader/Source/: Shader.cpp
